# GroupMeArchive

./: .gitignore  README.md  analysis.py  main.py  pyproject.toml
.agent/: project_context.md
groupme_archive/: __init__.py  analysis.py  cli.py  core.py
