[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "groupme-archive"
version = "0.1.0"
description = "A modern tool for archiving and analyzing GroupMe chat data."
authors = [
    { name = "Marcus Salinas" }
]
dependencies = [
    "requests>=2.31.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
groupme-archive = "groupme_archive.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["groupme_archive*"]
